# FEX

./: CMakeLists.txt
FEXCore/Source/: CMakeLists.txt
FEXCore/Source/Interface/Core/: Frontend.cpp  Frontend.h  OpcodeDispatcher.cpp  OpcodeDispatcher.h
Source/Windows/ARM64EC/: ARM64ECSymbols.S  CMakeLists.txt  Module.S  Module.cpp
Source/Windows/Common/: CMakeLists.txt  CRT.cpp  CRT.h  LibC.h  OvercommitTracker.h  Runtime.cpp
Source/Windows/Defs/: ntdll.def
Source/Windows/include/: winternl.h
